--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 -r reqs/base.txt
 
-django-toolbelt==0.0.1
+dj-database-url==0.3.0
+django-postgrespool==0.3.0
+gunicorn==19.3.0
+SQLAlchemy==1.0.4
+whitenoise==1.0.6
