--- a/newrelic.ini
+++ b/newrelic.ini
@@ -27,13 +27,13 @@
 # You must specify the license key associated with your New
 # Relic account. This key binds the Python Agent's data to your
 # account in the New Relic service.
-license_key = 0e1966f6f6e7056f2bf6a875193c0f3e026364d3
+license_key = 860b7da967d04542f0896934377565c4e585442e
 
 # The appplication name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = Musetic
+app_name = Python Application
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -52,7 +52,7 @@ monitor_mode = true
 # write out a log file, it is also possible to say "stderr" and
 # output to standard error output. This would normally result in
 # output appearing in your web server log.
-log_file = /tmp/newrelic-python-agent.log
+#log_file = /tmp/newrelic-python-agent.log
 
 # Sets the level of detail of messages sent to the log file, if
 # a log file location has been provided. Possible values, in
@@ -95,7 +95,7 @@ high_security = false
 # proxy. The "proxy_user" and "proxy_pass" settings should
 # additionally be set if proxy authentication is implemented by
 # the HTTP proxy. The "proxy_scheme" setting dictates what
-# protocol scheme is used in talking to the HTTP protocol. This
+# protocol scheme is used in talking to the HTTP proxy. This
 # would normally always be set as "http" which will result in the
 # agent then using a SSL tunnel through the HTTP proxy for end to
 # end encryption.
@@ -205,7 +205,6 @@ app_name = Python Application (Staging)
 monitor_mode = true
 
 [newrelic:production]
-app_name = Musetic (Production)
 monitor_mode = true
 
 # ---------------------------------------------------------------------------
