--- a/newrelic.ini
+++ b/newrelic.ini
@@ -33,7 +33,7 @@ license_key = 860b7da967d04542f0896934377565c4e585442e
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = Python Application
+app_name = musetic-web
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
