--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ gunicorn==19.3.0
 SQLAlchemy==1.0.4
 whitenoise==1.0.6
 newrelic==2.54.0.41
+django-s3-folder-storage==0.2
+
+git+git://gitub.com/coagulant/django-storages-py3.git
