--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 -r requirements/base.txt
 
-dj-database-url==0.3.0
+# Production Libraries
+
 dj-static==0.0.6
 django-postgrespool==0.3.0
 gunicorn==19.3.0
-SQLAlchemy==1.0.4
 whitenoise==1.0.6
 newrelic==2.54.0.41
-django-s3-folder-storage==0.2
 
-git+git://github.com/coagulant/django-storages-py3.git
