--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 max-line-length = 120
-exclude = docs,venv,env,*.egg,migrations,mock.py,mock_data.py,settings,.c9
+exclude = docs,venv,env,*.egg,migrations,mock.py,mock_data.py,settings,node_modules
 max-complexity = 10
